--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,11 +22,10 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
+    arguments: '-o $(Build.ArtifactStagingDirectory)'
 
-- task: AzureRmWebAppDeployment@4
+- task: PublishBuildArtifacts@1
   inputs:
-    ConnectionType: 'AzureRM'
-    appType: 'webApp'
-    WebAppName: 
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
-
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
