--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -1,13 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>Hello_World</RootNamespace>
   </PropertyGroup>
 
 
   <ItemGroup>
-    <Compile Remove="CodeFile.cs" />
   </ItemGroup>
 
 </Project>
