--- a/HelloWorld/Properties/launchSettings.json
+++ b/HelloWorld/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:50823",
-      "sslPort": 44325
+      "applicationUrl": "http://localhost:61827",
+      "sslPort": 44397
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Hello_World": {
+    "HelloWorld": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
