Setting up local database for testing before implementing repository pattern.

--- a/FitnessClub/appsettings.json
+++ b/FitnessClub/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "FCContext": "Server=DESKTOP-2D6F1RD\\SQLEXPRESS;Database=FCDB;AttachDBFilename=E:\\MyDatabases\\FCDB.mdf;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
