--- a/FitnessClub/FitnessClub.csproj
+++ b/FitnessClub/FitnessClub.csproj
@@ -11,6 +11,18 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200227221659_PostgreSQL1.cs" />
     <Compile Remove="Migrations\20200227221659_PostgreSQL1.Designer.cs" />
+    <Compile Remove="Migrations\20200325122254_Identity1.cs" />
+    <Compile Remove="Migrations\20200325122254_Identity1.Designer.cs" />
+    <Compile Remove="Migrations\20200325152952_Identity2.cs" />
+    <Compile Remove="Migrations\20200325152952_Identity2.Designer.cs" />
+    <Compile Remove="Migrations\20200325165848_Identity3.cs" />
+    <Compile Remove="Migrations\20200325165848_Identity3.Designer.cs" />
+    <Compile Remove="Migrations\20200325170133_Identity4.cs" />
+    <Compile Remove="Migrations\20200325170133_Identity4.Designer.cs" />
+    <Compile Remove="Migrations\20200325172233_Identity5.cs" />
+    <Compile Remove="Migrations\20200325172233_Identity5.Designer.cs" />
+    <Compile Remove="Migrations\20200325172534_Identity6.cs" />
+    <Compile Remove="Migrations\20200325172534_Identity6.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
