--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+# App settings with secret data
+appsettings.json
+appsettings.Development.json
+web.config
+launchSettings.json
+database-url.json
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
