Implementing logging in a file and database depending on environment.

--- a/FitnessClub/appsettings.Production.json
+++ b/FitnessClub/appsettings.Production.json
@@ -9,8 +9,8 @@
       "Name": "PostgreSQL",
       "Args": {
         "connectionString": "FCConnectionString",
-        "tableName": "logs",
-        "needAutoCreateTable": false,
+        "tableName": "Logs",
+        "needAutoCreateTable": true,
         "batchPostingLimit": 1
       }
     }
