--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ bld/
 # App settings with secret data
 # appsettings.json
 # appsettings.Development.json
+LogFiles
 database-url.json
 
 # Visual Studio 2015/2017 cache/options directory
