--- a/FitnessClub/FitnessClub.csproj
+++ b/FitnessClub/FitnessClub.csproj
@@ -23,6 +23,16 @@
     <Compile Remove="Migrations\20200325172233_Identity5.Designer.cs" />
     <Compile Remove="Migrations\20200325172534_Identity6.cs" />
     <Compile Remove="Migrations\20200325172534_Identity6.Designer.cs" />
+    <Compile Remove="Migrations\20200401201428_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200401201428_PostgreSQL2.Designer.cs" />
+    <Compile Remove="Migrations\20200401215337_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200401215337_PostgreSQL2.Designer.cs" />
+    <Compile Remove="Migrations\20200401222528_PostgreSQL3.cs" />
+    <Compile Remove="Migrations\20200401222528_PostgreSQL3.Designer.cs" />
+    <Compile Remove="Migrations\20200401223055_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200401223055_PostgreSQL2.Designer.cs" />
+    <Compile Remove="Migrations\20200401224155_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200401224155_PostgreSQL2.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -95,6 +105,16 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="3.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.PostgreSQL" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="LogFiles\" />
   </ItemGroup>
 
 </Project>
