--- a/FitnessClub/FitnessClub.csproj
+++ b/FitnessClub/FitnessClub.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200507234135_PostgreSQL1.cs" />
+    <Compile Remove="Migrations\20200507234135_PostgreSQL1.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Data\DAL\IPersonRepository.cs.txt" />
     <None Remove="Data\DAL\PersonRepository.cs.txt" />
   </ItemGroup>
@@ -63,6 +68,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.0.0-preview5-19227-01" />
