--- a/FitnessClub/FitnessClub.csproj
+++ b/FitnessClub/FitnessClub.csproj
@@ -11,6 +11,12 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200507234135_PostgreSQL1.cs" />
     <Compile Remove="Migrations\20200507234135_PostgreSQL1.Designer.cs" />
+    <Compile Remove="Migrations\20200512152438_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200512152438_PostgreSQL2.Designer.cs" />
+    <Compile Remove="Migrations\20200512154042_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200512154042_PostgreSQL2.Designer.cs" />
+    <Compile Remove="Migrations\20200512154315_PostgreSQL2.cs" />
+    <Compile Remove="Migrations\20200512154315_PostgreSQL2.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
