--- a/FitnessClub/FitnessClub.csproj
+++ b/FitnessClub/FitnessClub.csproj
@@ -33,6 +33,8 @@
     <Compile Remove="Migrations\20200519203641_PostgreSQL17.Designer.cs" />
     <Compile Remove="Migrations\20200519204034_PostgreSQL17.cs" />
     <Compile Remove="Migrations\20200519204034_PostgreSQL17.Designer.cs" />
+    <Compile Remove="Migrations\20200527004501_PostgreSQL1.cs" />
+    <Compile Remove="Migrations\20200527004501_PostgreSQL1.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
