--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ bld/
 # appsettings.json
 # appsettings.Development.json
 LogFiles
+UnitTests
 database-url.json
 
 # Visual Studio 2015/2017 cache/options directory
